Fix the marging - pading - image overlape

--- a/style.css
+++ b/style.css
@@ -58,10 +58,10 @@ header {
 
 section {
   background: url(img/header-shapes\ mobile@2x.svg);
-  height: 100vh;
+  height: 50vh;
   background-repeat: no-repeat;
   background-size: 100% auto;
-  padding: 0 20px;
+  padding: 10px 25px;
 }
 
 .Perso {
@@ -349,7 +349,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 10;
+  padding: 100;
   gap: 12px;
   flex: none;
   order: 0;
@@ -437,9 +437,9 @@ button {
   align-items: center;
   background: #f7f7f9;
   border-radius: 8px;
-  padding-left: 14px;
-  margin: 6px;
-  width: 327px;
+  padding-left: 8px;
+  margin: 5px;
+  width: 350px;
   height: 72px;
 }
 
@@ -455,7 +455,7 @@ button {
   line-height: 20px;
   color: #253858;
   padding: 24px 0 24px 15px;
-  margin: 0;
+  margin: 10px;
 }
 
 .bottom-line {
